// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exports > css snapshot 1`] = `
"/* Generated by Shadely (Groundwork Technologies) */
:root {
  --brand-50: #f2f7ff;
  --brand-100: #e0ecff;
  --brand-200: #cedbf0;
  --brand-300: #aac5f0;
  --brand-400: #73a3f2;
  --brand-500: #3b82f6;
  --brand-600: #1667e3;
  --brand-700: #1157c1;
  --brand-800: #12469a;
  --brand-900: #113b7f;
  --brand-950: #0a244f;
}
"
`;

exports[`exports > dtcg snapshot 1`] = `
"{
  "$description": "Generated by Shadely (Groundwork Technologies)",
  "brand": {
    "50": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.9747,
          0.0119,
          259.82
        ],
        "hex": "#f2f7ff"
      }
    },
    "100": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.9398,
          0.0288,
          259.59
        ],
        "hex": "#e0ecff"
      }
    },
    "200": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.8881,
          0.0322,
          260.03
        ],
        "hex": "#cedbf0"
      }
    },
    "300": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.8181,
          0.0677,
          259.63
        ],
        "hex": "#aac5f0"
      }
    },
    "400": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.7146,
          0.1272,
          259.98
        ],
        "hex": "#73a3f2"
      }
    },
    "500": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.6231,
          0.188,
          259.81
        ],
        "hex": "#3b82f6"
      }
    },
    "600": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.5444,
          0.2029,
          259.82
        ],
        "hex": "#1667e3"
      }
    },
    "700": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.4831,
          0.1791,
          259.7
        ],
        "hex": "#1157c1"
      }
    },
    "800": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.4147,
          0.1478,
          260.06
        ],
        "hex": "#12469a"
      }
    },
    "900": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.3673,
          0.1242,
          259.92
        ],
        "hex": "#113b7f"
      }
    },
    "950": {
      "$type": "color",
      "$value": {
        "colorSpace": "oklch",
        "components": [
          0.2692,
          0.0854,
          260.03
        ],
        "hex": "#0a244f"
      }
    }
  }
}
"
`;

exports[`exports > json snapshot 1`] = `
"{
  "brand": {
    "50": "#f2f7ff",
    "100": "#e0ecff",
    "200": "#cedbf0",
    "300": "#aac5f0",
    "400": "#73a3f2",
    "500": "#3b82f6",
    "600": "#1667e3",
    "700": "#1157c1",
    "800": "#12469a",
    "900": "#113b7f",
    "950": "#0a244f"
  }
}
"
`;

exports[`exports > scss snapshot 1`] = `
"// Generated by Shadely (Groundwork Technologies)

$brand-50: #f2f7ff;
$brand-100: #e0ecff;
$brand-200: #cedbf0;
$brand-300: #aac5f0;
$brand-400: #73a3f2;
$brand-500: #3b82f6;
$brand-600: #1667e3;
$brand-700: #1157c1;
$brand-800: #12469a;
$brand-900: #113b7f;
$brand-950: #0a244f;

$brand: (
  50: $brand-50,
  100: $brand-100,
  200: $brand-200,
  300: $brand-300,
  400: $brand-400,
  500: $brand-500,
  600: $brand-600,
  700: $brand-700,
  800: $brand-800,
  900: $brand-900,
  950: $brand-950,
);
"
`;

exports[`exports > tailwind v3 variants > cjs 1`] = `
"// Generated by Shadely (Groundwork Technologies)
/** @type {import('tailwindcss').Config} */
module.exports = {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f2f7ff',
        100: '#e0ecff',
        200: '#cedbf0',
        300: '#aac5f0',
        400: '#73a3f2',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
};
"
`;

exports[`exports > tailwind v3 variants > esm 1`] = `
"// Generated by Shadely (Groundwork Technologies)
/** @type {import('tailwindcss').Config} */
export default {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f2f7ff',
        100: '#e0ecff',
        200: '#cedbf0',
        300: '#aac5f0',
        400: '#73a3f2',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
};
"
`;

exports[`exports > tailwind v3 variants > ts 1`] = `
"// Generated by Shadely (Groundwork Technologies)
import type { Config } from 'tailwindcss';

export default {
  theme: {
    extend: {
      colors: {
      brand: {
        50: '#f2f7ff',
        100: '#e0ecff',
        200: '#cedbf0',
        300: '#aac5f0',
        400: '#73a3f2',
        500: '#3b82f6',
        600: '#1667e3',
        700: '#1157c1',
        800: '#12469a',
        900: '#113b7f',
        950: '#0a244f',
      },
      },
    },
  },
} satisfies Config;
"
`;

exports[`exports > tailwind v4 snapshot 1`] = `
"/* Generated by Shadely (Groundwork Technologies) */
@import "tailwindcss";

@theme {
  --color-brand-50: oklch(97.5% 0.012 259.82);
  --color-brand-100: oklch(94% 0.029 259.59);
  --color-brand-200: oklch(88.8% 0.032 260.03);
  --color-brand-300: oklch(81.8% 0.068 259.63);
  --color-brand-400: oklch(71.5% 0.127 259.98);
  --color-brand-500: oklch(62.3% 0.188 259.81);
  --color-brand-600: oklch(54.4% 0.203 259.82);
  --color-brand-700: oklch(48.3% 0.179 259.7);
  --color-brand-800: oklch(41.5% 0.148 260.06);
  --color-brand-900: oklch(36.7% 0.124 259.92);
  --color-brand-950: oklch(26.9% 0.085 260.03);
}
"
`;

exports[`exports > tokens-studio snapshot 1`] = `
"{
  "brand": {
    "50": {
      "value": "#f2f7ff",
      "type": "color"
    },
    "100": {
      "value": "#e0ecff",
      "type": "color"
    },
    "200": {
      "value": "#cedbf0",
      "type": "color"
    },
    "300": {
      "value": "#aac5f0",
      "type": "color"
    },
    "400": {
      "value": "#73a3f2",
      "type": "color"
    },
    "500": {
      "value": "#3b82f6",
      "type": "color"
    },
    "600": {
      "value": "#1667e3",
      "type": "color"
    },
    "700": {
      "value": "#1157c1",
      "type": "color"
    },
    "800": {
      "value": "#12469a",
      "type": "color"
    },
    "900": {
      "value": "#113b7f",
      "type": "color"
    },
    "950": {
      "value": "#0a244f",
      "type": "color"
    }
  }
}
"
`;
